<resources>
    <string name="app_name">G2 Simple Calculator</string>
    <string name="textview1">Welcome to Group2 Calculator</string>
    <string name="des2">Group2 Members: Bayoran Nicko, Cahutay Ian Clint, Gimena Vhencint, Lachica Juan Miguel,
        Traballo Jhon, and Rosellosa Jay"</string>
    <string name="lol">‎</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="c">c</string>
    <string name="percent">%</string>
    <string name="less">&lt;</string>


</resources>