<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animated_bg"
    tools:context=".simplecalc">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576">


        <Button
            android:id="@+id/bclear"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bdivide"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/less"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bpercent"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bmultiply"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/multiplication"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bminus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/subtraction"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bplus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/addition"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855">

        <Button
            android:id="@+id/bdot"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="691dp" />

        <Button
            android:id="@+id/b0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="691dp" />

        <Button
            android:id="@+id/bequals"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/lorange"
            android:alpha="0.8"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="691dp" />

    </GridLayout>

    <EditText
        android:id="@+id/inputBox"
        android:layout_width="388dp"
        android:layout_height="71dp"
        android:ems="10"
        android:hint="@string/lol"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />


</androidx.constraintlayout.widget.ConstraintLayout>

